# chloe

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: database.rs  error.rs  main.rs  redis_client.rs  schema.rs  settings.rs
src/commands/: ping.rs  status.rs
src/llm/: factory.rs  groq.rs  mod.rs  openrouter.rs  provider.rs  types.rs  zai.rs
src/queue/: listener.rs  mod.rs  settings_update.rs  update_prompt.rs  user_operations.rs
src/reactions/: combined_handler.rs  llm_handler.rs  mention_handler.rs  message_ping.rs  mod.rs  reply_handler.rs
src/services/: gemini_types.rs  guild_service.rs  llm_service.rs  mod.rs  prompt_builder.rs  user_service.rs
src/tools/: calculator.rs  discord_message.rs  discord_reaction.rs  fetch.rs  image_generation.rs  mod.rs  playwright.rs  time.rs  tool_definitions.rs  tool_executor.rs  tool_names.rs  web_search.rs
src/utils/: image_processor.rs  message_sanitizer.rs  mod.rs  rate_limiter.rs  regex_patterns.rs
