[package]
name = "chloe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
serenity = "0.12.4"
poise = "0.6.1"
redis = { version = "0.31.0", features = ["tls-native-tls"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
