[package]
name = "chloe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-metrics = { version = "0.3", features = ["rt"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
serenity = "0.12.4"
poise = "0.6.1"
redis = { version = "0.31.0", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11"
lazy_static = "1.4"
